--- a/pages/10364.html
+++ b/pages/10364.html
@@ -471,7 +471,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -920,6 +920,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/gravitino+condensation'>gravitino condensation</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gaugino+condensation'>gaugino condensation</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -943,14 +947,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 21, 2017 12:02:43 
+  Revised on February 22, 2018 04:23:49 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.96.226.74)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/condensate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/condensate/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/condensate" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/condensate" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/condensate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/condensate/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/condensate" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/condensate" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
