--- a/pages/19020.html
+++ b/pages/19020.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -701,10 +701,10 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#mssm'><math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#mssm'><math class='maruku-mathml' display='inline' id='mathml_21e3a7845e72b1afd1c4b620765ffa74f38e7252_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a> <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a>, the term <em>split supersymmetry</em> refers to <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetric</a> extensions of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> whose <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> is very high (for instance at <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>-scale of about <math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>15</mn></msup></mrow><annotation encoding='application/x-tex'>10^{15}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), much higher than the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> (of about 246 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), but such that approximate <a class='existingWikiWord' href='/nlab/show/chiral+anomaly'>chiral symmetry</a> <a class='existingWikiWord' href='/nlab/show/protection+from+quantum+corrections'>protects</a> the <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> of the <a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a> <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a>, the term <em>split supersymmetry</em> refers to <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetric</a> extensions of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> whose <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> is very high (for instance at <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>-scale of about <math class='maruku-mathml' display='inline' id='mathml_21e3a7845e72b1afd1c4b620765ffa74f38e7252_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>15</mn></msup></mrow><annotation encoding='application/x-tex'>10^{15}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), much higher than the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> (of about 246 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), but such that approximate <a class='existingWikiWord' href='/nlab/show/chiral+anomaly'>chiral symmetry</a> <a class='existingWikiWord' href='/nlab/show/protection+from+quantum+corrections'>protects</a> the <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> of the <a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a>.</p>
 
 <p>As a result, in such <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> there is a “split” of the <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scales</a> of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>:</p>
 
@@ -714,7 +714,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>the fermionic <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> (<a class='existingWikiWord' href='/nlab/show/gaugino'>gauginos</a> and <a class='existingWikiWord' href='/nlab/show/higgsino'>higgsino</a>) have masses much closer to the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a> scale, at about one <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>.</p>
+<p>the fermionic <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> (<a class='existingWikiWord' href='/nlab/show/gaugino'>gauginos</a> and <a class='existingWikiWord' href='/nlab/show/higgsino'>higgsino</a>) have masses much closer to the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a> scale, at about a few <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>.</p>
 </li>
 </ol>
 
@@ -726,14 +726,14 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='mssm'><math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</h3>
+<h3 id='mssm'><math class='maruku-mathml' display='inline' id='mathml_21e3a7845e72b1afd1c4b620765ffa74f38e7252_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</h3>
 
 <p>The class of <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>physics</a> called <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a> generically exhibits “slightly” split supersymmetry.</p>
 
 <p>From <a href='#Kane17'>Kane 17, p. 43-44 ((5-1)-(5-2))</a>:</p>
 
 <blockquote>
-<p>It is important to understand that there are two measures relevant to understanding supersymmetry breaking, one the scale at which it is broken (about <math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>14</mn></msup></mrow><annotation encoding='application/x-tex'>10^{14}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a> as described above), and the other the resulting <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass. In the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactified</a> <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> case the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass is calculated, and comes out to be about 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (40 000 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>). Sometimes even experts confuse these two scales if they are speculating about <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a> without a real theory to calculate.</p>
+<p>It is important to understand that there are two measures relevant to understanding supersymmetry breaking, one the scale at which it is broken (about <math class='maruku-mathml' display='inline' id='mathml_21e3a7845e72b1afd1c4b620765ffa74f38e7252_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>14</mn></msup></mrow><annotation encoding='application/x-tex'>10^{14}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a> as described above), and the other the resulting <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass. In the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactified</a> <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> case the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass is calculated, and comes out to be about 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (40 000 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>). Sometimes even experts confuse these two scales if they are speculating about <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a> without a real theory to calculate.</p>
 
 <p>Thus 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> is the natural scale for <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> masses. That is not a surprising number in a theory starting with everything at the <a class='existingWikiWord' href='/nlab/show/Planck+scale'>Planck scale</a>, but it is surprising if one expects the superpartner masses to be near the particle masses (all well below 1 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>). The <a class='existingWikiWord' href='/nlab/show/squark'>squarks</a> and other masses are indeed predicted to be at the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> scale, tens of <a class='existingWikiWord' href='/nlab/show/TeV'>tera-electronvolts</a>.</p>
 
@@ -774,14 +774,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 21, 2018 14:53:05 
+  Revised on February 22, 2018 04:15:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.206)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/split+supersymmetry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/split+supersymmetry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/split+supersymmetry/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/split+supersymmetry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/split+supersymmetry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
