--- a/pages/5878.html
+++ b/pages/5878.html
@@ -701,7 +701,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#experiment'>Experiment</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> the term <em>gaugino</em> denotes a field that is a <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> of a <a class='existingWikiWord' href='/nlab/show/gauge+boson'>gauge boson</a>. This appears in <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a>. For instance the partner of a <a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a> in the <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a> is called a <a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a>, and so on.</p>
@@ -717,6 +717,16 @@ margin-left: 0em;
 <p>gauginos are the odd components of superconnections.</p>
 </li>
 </ul>
+
+<h2 id='experiment'>Experiment</h2>
+
+<p>Experimental exclusion bounds of gluino <a class='existingWikiWord' href='/nlab/show/mass'>rest masses</a> due to the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> excludes gluinos/<a class='existingWikiWord' href='/nlab/show/squark'>squarks</a> of mass below about 3-4 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (<a href='#ParticleDataGroup17'>Particle Data Group Review 17, figure 113.2 and 113.9</a>):</p>
+
+<p><img src='https://ncatlab.org/nlab/files/SquarkGluinoMassExclusion2017.png' width='700'/></p>
+
+<p><a class='existingWikiWord' href='/nlab/files/LHCSuperpartnerMassExclusion2017.png' title=''></a></p>
+
+<p><img src='https://ncatlab.org/nlab/files/LHCSuperpartnerMassExclusion2017.png' width='1050'/></p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -734,16 +744,28 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class='newWikiWord'>gaugino condensation<a href='/nlab/new/gaugino+condensation'>?</a></span></p>
+<p><a class='existingWikiWord' href='/nlab/show/gaugino+condensation'>gaugino condensation</a></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
 
-<p>For instance around page 48 of</p>
+<p>Theoretical discussion includes</p>
 
 <ul>
 <li>F. Gieres, <em>Geometry of Supersymmetric Gauge Theories: Including an Introduction to BRS Differential Algebras and Anomalies</em> Springer Lecture Notes in Physics 302 (1998)</li>
+</ul>
+
+<p>Experimental exclusion bounds are discussed iin</p>
+
+<ul>
+<li id='ParticleDataGroup17'><a href='http://pdg.lbl.gov/'>Particle Data Group Review 2017</a>, 113. <em>Supersymmetry , part II (experiment)</em> (<a href='http://pdg.lbl.gov/2017/reviews/rpp2017-rev-susy-2-experiment.pdf'>pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Gaugino'>Gaugino</a></em></li>
 </ul>
 
 <p>
@@ -751,14 +773,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 21, 2018 14:08:12 
+  Revised on February 22, 2018 04:34:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.206)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gaugino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gaugino/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/gaugino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gaugino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gaugino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gaugino/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/gaugino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gaugino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
