--- a/pages/9907.html
+++ b/pages/9907.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,19 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p>The hypothetical <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/particle'>particle</a> of the <a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a>.</p>
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
 
-<h2 id='related_entries'>Related entries</h2>
-
+<div class='hide'>
 <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -338,15 +337,19 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
+</li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -360,6 +363,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
@@ -367,6 +374,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
 </li>
 
 <li>
@@ -386,24 +397,28 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a></strong></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
+<p>bosinos:</p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></p>
+</li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
+<p><a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/squark'>squark</a></li>
 </ul>
 
 <p><strong>Exotica</strong></p>
@@ -418,10 +433,6 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
 </li>
 
@@ -430,7 +441,300 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
+</li>
+</ul>
+</div>
+
+<h4 id='supergeometry'>Super-Geometry</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebra</a></strong> and (<a class='existingWikiWord' href='/nlab/show/synthetic+differential+supergeometry'>synthetic</a> ) <strong><a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a></strong></p>
+
+<h2 id='background'>Background</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/graded+set'>graded object</a></p>
+</li>
+</ul>
+
+<h2 id='introductions'>Introductions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+superalgebra'>geometry of physics -- superalgebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supergeometry'>geometry of physics -- supergeometry</a></p>
+</li>
+</ul>
+
+<h2 id='superalgebra'>Superalgebra</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector space</a>, <a class='existingWikiWord' href='/nlab/show/super+vector+space'>SVect</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+algebra'>super algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supercommutative+algebra'>supercommutative superalgebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/exterior+algebra'>Grassmann algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Clifford+algebra'>Clifford algebra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/superdeterminant'>superdeterminant</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+L-infinity+algebra'>super L-infinity algebra</a></p>
+</li>
+</ul>
+
+<h2 id='supergeometry_2'>Supergeometry</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/superpoint'>superpoint</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Cartesian+space'>super Cartesian space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a>, <a class='existingWikiWord' href='/nlab/show/SDiff'>SDiff</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/NQ-supermanifold'>NQ-supermanifold</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+vector+bundle'>super vector bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/complex+supermanifold'>complex supermanifold</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euclidean+supermanifold'>Euclidean supermanifold</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+spacetime'>super spacetime</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/super+Minkowski+spacetime'>super Minkowski spacetime</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Berezin+integral'>Berezin integral</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supergroup'>super Lie group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supergroup'>super translation group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Euclidean+group'>super Euclidean group</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+infinity-groupoid'>super ∞-groupoid</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+formal+smooth+infinity-groupoid'>super formal smooth ∞-groupoid</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+line+2-bundle'>super line 2-bundle</a></p>
+</li>
+</ul>
+
+<h2 id='supersymmetry'>Supersymmetry</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/division+algebra+and+supersymmetry'>division algebra and supersymmetry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+multiplet'>supermultiplet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>M-theory super Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/type+II+supersymmetry+algebra'>type II super Lie algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></p>
+</li>
+</ul>
+
+<h2 id='supersymmetric_field_theory'>Supersymmetric field theory</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/superfield'>superfield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supersymmetric+quantum+mechanics'>supersymmetric quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/superparticle'>superparticle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adinkra'>adinkra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/gauged+supergravity'>gauged supergravity</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/string+theory'>superstring theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/heterotic+string+theory'>heterotic string theory</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/geometric+model+for+elliptic+cohomology'>geometric model for elliptic cohomology</a></li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/supergeometry+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#experiment'>Experiment</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The hypothetical <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a>-<a class='existingWikiWord' href='/nlab/show/particle'>particle</a> of the <a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a>. A <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a>.</p>
+
+<h2 id='experiment'>Experiment</h2>
+
+<p>Experimental exclusion bounds of gluino <a class='existingWikiWord' href='/nlab/show/mass'>rest masses</a> due to the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> excludes gluinos/<a class='existingWikiWord' href='/nlab/show/squark'>squarks</a> of mass below about 3-4 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (<a href='#ParticleDataGroup17'>Particle Data Group Review 17, figure 113.2 and 113.9</a>):</p>
+
+<p><img src='https://ncatlab.org/nlab/files/SquarkGluinoMassExclusion2017.png' width='700'/></p>
+
+<p><a class='existingWikiWord' href='/nlab/files/LHCSuperpartnerMassExclusion2017.png' title=''></a></p>
+
+<p><img src='https://ncatlab.org/nlab/files/LHCSuperpartnerMassExclusion2017.png' width='1050'/></p>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>split supersymmetry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gaugino+condensation'>gaugino condensation</a></p>
+</li>
+</ul>
+
 <h2 id='references'>References</h2>
+
+<ul>
+<li id='ParticleDataGroup17'><a href='http://pdg.lbl.gov/'>Particle Data Group Review 2017</a>, 113. <em>Supersymmetry , part II (experiment)</em> (<a href='http://pdg.lbl.gov/2017/reviews/rpp2017-rev-susy-2-experiment.pdf'>pdf</a>)</li>
+</ul>
+
+<p>See also</p>
 
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Gluino'>Gluino</a></em></li>
@@ -441,14 +745,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on June 13, 2013 00:33:45 
+  Revised on February 22, 2018 04:34:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.174.43.123)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gluino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/gluino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gluino/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/gluino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gluino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
